--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
     "*.tcc": "cpp",
     "memory": "cpp",
     "functional": "cpp",
-    "iosfwd": "cpp"
+    "iosfwd": "cpp",
+    "unordered_map": "cpp",
+    "fstream": "cpp",
+    "istream": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp"
   }
 }
