--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,6 @@ source/CMakeCache.txt
 source/CMakeFiles
 source/cmake
 source/cmake_install.cmake
-screenshot.png
+screenshot.*
 inference_result.txt
 captures/**
