--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -40,8 +40,8 @@ add_executable(${target}
 		${CMAKE_CURRENT_LIST_DIR}/AppWorldLogic.cpp
 		${CMAKE_CURRENT_LIST_DIR}/AppWorldLogic.h
 		${CMAKE_CURRENT_LIST_DIR}/main.cpp
-		${CMAKE_CURRENT_LIST_DIR}/AGSpectator.cpp
-		${CMAKE_CURRENT_LIST_DIR}/AGSpectator.h
+		${CMAKE_CURRENT_LIST_DIR}/Alligator.cpp
+		${CMAKE_CURRENT_LIST_DIR}/Alligator.h
 		${CMAKE_CURRENT_LIST_DIR}/AgEvalThread.cpp
 		${CMAKE_CURRENT_LIST_DIR}/AgEvalThread.h
 	)
