--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -22,18 +22,25 @@ set(UNIGINE_INCLUDE_DIR ${UNIGINE_SDK_PATH}include)
 ## Dependencies.
 ##==============================================================================
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
+list(APPEND CMAKE_MODULE_PATH "/home/simpson/prog/g2o/cmake_modules")
 
 list(APPEND CMAKE_PREFIX_PATH "/home/simpson/prog/libtorch")
 find_package(Torch REQUIRED)
 find_package(OpenCV REQUIRED)
+find_package(G2O REQUIRED)
+find_package(Eigen3 REQUIRED)
 
+# MESSAGE(Eigen3:${EIGEN3_INCLUDE_DIR})
+MESSAGE(Eigen3:${EIGEN3_LIBS})
 set(target "tennis_court")
 
 # Engine.
 find_package(Engine REQUIRED MODULE QUIET)
 
 add_executable(${target}
-${CMAKE_CURRENT_LIST_DIR}/main.cpp
+		${CMAKE_CURRENT_LIST_DIR}/Alligator.cpp
+		${CMAKE_CURRENT_LIST_DIR}/AgSLAM.cpp
+
 		${CMAKE_CURRENT_LIST_DIR}/AppEditorLogic.cpp
 		${CMAKE_CURRENT_LIST_DIR}/AppEditorLogic.h
 		${CMAKE_CURRENT_LIST_DIR}/AppSystemLogic.cpp
@@ -42,17 +49,18 @@ ${CMAKE_CURRENT_LIST_DIR}/main.cpp
 		${CMAKE_CURRENT_LIST_DIR}/AppWorldLogic.h
 		${CMAKE_CURRENT_LIST_DIR}/AgUtilities.h
 		${CMAKE_CURRENT_LIST_DIR}/AgSLAM.h
-		${CMAKE_CURRENT_LIST_DIR}/AgSLAM.cpp
 		${CMAKE_CURRENT_LIST_DIR}/AgEvalThread.h
 		${CMAKE_CURRENT_LIST_DIR}/AgEvalThread.cpp
 		${CMAKE_CURRENT_LIST_DIR}/Alligator.h
-		${CMAKE_CURRENT_LIST_DIR}/Alligator.cpp
+		${CMAKE_CURRENT_LIST_DIR}/main.cpp
 	)
 
 target_include_directories(${target}
 	PRIVATE
 	${UNIGINE_INCLUDE_DIR}
 	${OpenCV_INCLUDE_DIRS}
+	${G2O_INCLUDE_DIRS}
+	${EIGEN3_INCLUDE_DIR}
 	)
 
 target_link_libraries(${target}
@@ -60,7 +68,9 @@ target_link_libraries(${target}
 	Unigine::Engine
 	${TORCH_LIBRARIES}
 	${OpenCV_LIBS}
+	${G2O_LIBS}
 	)
+
 
 target_compile_definitions(${target}
 	PRIVATE
